--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
 	<!--=== Title ===-->
 	<title>Daniel Afonso</title>
 	
-	<!--=== Pingback ===-->
-	<!--<link rel="pingback" href="http://demo.shortithemes.com/bright-idea/xmlrpc.php" /> -->
-	
 	<!--// BEGIN CSS Settings //-->
 	
 
@@ -84,15 +81,7 @@
 						font-family: "Bitter", serif;
 				font-weight: 700;
 					}
-			
-			/* iPads (portrait and landscape) ----------- */
-			@media only screen 
-			and (min-device-width : 768px) #menu-fixed .nav ul li a
-			and (max-device-width : 1024px) {
-			
-				
-			
-			}
+
 	
 		/*=== Header ===*/
 
@@ -113,12 +102,12 @@
 <link rel="alternate" type="application/rss+xml" title="Bright Idea &raquo; Comments Feed" href="http://demo.shortithemes.com/bright-idea/comments/feed/" />
 <link rel="alternate" type="application/rss+xml" title="Bright Idea &raquo; One Page Comments Feed" href="http://demo.shortithemes.com/bright-idea/one-page/feed/" />-->
 	
-	<link rel='stylesheet' id='si_bitter-css'  href='http://fonts.googleapis.com/css?family=Bitter%3A400%2C700%2C400italic&#038;ver=3.6.1' type='text/css' media='all' />
-	<link rel='stylesheet' id='si_droidserif-css'  href='http://fonts.googleapis.com/css?family=Droid+Serif&#038;ver=3.6.1' type='text/css' media='all' />
-	<link rel='stylesheet' id='si_opensans-css'  href='http://fonts.googleapis.com/css?family=Open+Sans%3A300italic%2C400italic%2C600italic%2C700italic%2C800italic%2C300%2C400%2C600%2C700%2C800&#038;ver=3.6.1' type='text/css' media='all' />
-	<link rel='stylesheet' id='si_droidsans-css'  href='http://fonts.googleapis.com/css?family=Droid+Sans&#038;ver=3.6.1' type='text/css' media='all' />
-	<link rel='stylesheet' id='si_raleway-css'  href='http://fonts.googleapis.com/css?family=Raleway%3A400%2C300%2C200%2C100%2C500%2C600%2C700%2C800%2C900&#038;ver=3.6.1' type='text/css' media='all' />
-	<link rel='stylesheet' id='si_montserrat-css'  href='http://fonts.googleapis.com/css?family=Montserrat%3A400%2C700&#038;ver=3.6.1' type='text/css' media='all' />
+	<link rel='stylesheet' id='si_bitter-css'  href='//fonts.googleapis.com/css?family=Bitter%3A400%2C700%2C400italic&#038;ver=3.6.1' type='text/css' media='all' />
+	<link rel='stylesheet' id='si_droidserif-css'  href='//fonts.googleapis.com/css?family=Droid+Serif&#038;ver=3.6.1' type='text/css' media='all' />
+	<link rel='stylesheet' id='si_opensans-css'  href='//fonts.googleapis.com/css?family=Open+Sans%3A300italic%2C400italic%2C600italic%2C700italic%2C800italic%2C300%2C400%2C600%2C700%2C800&#038;ver=3.6.1' type='text/css' media='all' />
+	<link rel='stylesheet' id='si_droidsans-css'  href='//fonts.googleapis.com/css?family=Droid+Sans&#038;ver=3.6.1' type='text/css' media='all' />
+	<link rel='stylesheet' id='si_raleway-css'  href='//fonts.googleapis.com/css?family=Raleway%3A400%2C300%2C200%2C100%2C500%2C600%2C700%2C800%2C900&#038;ver=3.6.1' type='text/css' media='all' />
+	<link rel='stylesheet' id='si_montserrat-css'  href='//fonts.googleapis.com/css?family=Montserrat%3A400%2C700&#038;ver=3.6.1' type='text/css' media='all' />
 
 
 	<link rel='stylesheet' id='si_main_css-css'  href='Stylesheets/style.css?ver=3.6.1' type='text/css' media='all' />
@@ -1295,15 +1284,15 @@
 
 
 
-	<script type='text/javascript' src='scripts/jquery.ui.core.min.js?ver=1.10.3'></script>
-	<script type='text/javascript' src='scripts/jquery.ui.widget.min.js?ver=1.10.3'></script>
-	<script type='text/javascript' src='scripts/jquery.ui.tabs.min.js?ver=1.10.3'></script>
-	<script type='text/javascript' src='scripts/jquery.ui.accordion.min.js?ver=1.10.3'></script>
-	<script type='text/javascript' src='scripts/jquery.ui.effect.min.js?ver=1.10.3'></script>
-	<script type='text/javascript' src='scripts/jquery.ui.effect-fade.min.js?ver=1.10.3'></script>
-	<script type='text/javascript' src='http://maps.google.com/maps/api/js?sensor=false&#038;ver=1'></script>
-	<script type='text/javascript' src='scripts/theme.plugins.js?ver=1'></script>
-	<script type='text/javascript' src='scripts/settings.js?ver=1'></script>
+	<script type='text/javascript' src='Scripts/jquery.ui.core.min.js?ver=1.10.3'></script>
+	<script type='text/javascript' src='Scripts/jquery.ui.widget.min.js?ver=1.10.3'></script>
+	<script type='text/javascript' src='Scripts/jquery.ui.tabs.min.js?ver=1.10.3'></script>
+	<script type='text/javascript' src='Scripts/jquery.ui.accordion.min.js?ver=1.10.3'></script>
+	<script type='text/javascript' src='Scripts/jquery.ui.effect.min.js?ver=1.10.3'></script>
+	<script type='text/javascript' src='Scripts/jquery.ui.effect-fade.min.js?ver=1.10.3'></script>
+	<script type='text/javascript' src='//maps.google.com/maps/api/js?sensor=false&#038;ver=1'></script>
+	<script type='text/javascript' src='Scripts/theme.plugins.js?ver=1'></script>
+	<script type='text/javascript' src='Scripts/settings.js?ver=1'></script>
 
 </body>
 
