fix enlarge images

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 							</div>
 							<div class="project-action">
 								<a href="#" class="action-view ajax">Details</a>
-								<a href="images/soul_4.jpg" class="pretty" title="Soul Digital">Enlarge</a>
+								<a href="images/soul_4-800x600.jpg" class="pretty" title="Soul Digital">Enlarge</a>
 							</div>
 							<div class="project-info">
 								<h4 class="project-title">Soul Digital</h4>
@@ -380,7 +380,7 @@
 							</div>
 							<div class="project-action">
 								<a href="#" class="action-view ajax">Details</a>
-								<a href="images/illegal_5.jpg" class="pretty" title="Illegal Burger">Enlarge</a>
+								<a href="images/illegal_5-800x600.jpg" class="pretty" title="Illegal Burger">Enlarge</a>
 							</div>
 							<div class="project-info">
 								<h4 class="project-title">Illegal Burger</h4>
@@ -396,7 +396,7 @@
 							</div>
 							<div class="project-action">
 								<a href="#" class="action-view ajax">Details</a>
-								<a href="images/7_jj.jpg" class="pretty" title="JJ Royal &#8211; Pitch">Enlarge</a>
+								<a href="images/images/7_jj-800x600.jpg" class="pretty" title="JJ Royal &#8211; Pitch">Enlarge</a>
 							</div>
 							<div class="project-info">
 								<h4 class="project-title">JJ Royal &#8211; Pitch</h4>
@@ -412,7 +412,7 @@
 							</div>
 							<div class="project-action">
 								<a href="#" class="action-view ajax">Details</a>
-								<a href="images/future-dashboard.jpg" class="pretty" title="Dashboard of the Future">Enlarge</a>
+								<a href="images/future-dashboard-800x600.jpg" class="pretty" title="Dashboard of the Future">Enlarge</a>
 							</div>
 							<div class="project-info">
 								<h4 class="project-title">Dashboard of the Future</h4>
